debug expired time for access token, and refresh flow

--- a/api/LibraryManagement.Api/appsettings.json
+++ b/api/LibraryManagement.Api/appsettings.json
@@ -3,7 +3,7 @@
     "SecretKey": "bachhznrookie2engineerlibrarymanagementsystem",
     "Issuer": "LibraryManagementSystem",
     "Audience": "LibraryManagementSystem",
-    "ExpirationInMinutes": 60
+    "ExpirationMinutes": 60
   },
 
   "Logging": {
